criação da função addHideWarningClass para dar função ao botao X que está na div warning

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <section class="list">
-        
+
       </section>
 
       <div class="warning hide-warning">
@@ -47,7 +47,7 @@
           <span>O item foi removido da lista</span>
         </div>
 
-        <button>
+        <button onclick="addHideWarningClass()">
           <i class="ph ph-x"></i>
         </button>
       </div>
